--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,46 @@
 body {
-  margin: 0;
-  text-align: center;
   font-family: 'Merriweather', serif;
+  text-align: center;
+  margin: 0;
 }
 
 h1 {
-  color: #bbe1fa;
-  margin-top: 0;
+  font-size: 5.625rem;
   font-family: 'Sacramento', cursive;
-}
+  color: #3282b8;
+  line-height: 2; 
+  margin: 50px auto 0 auto;
 
-p {
-  color: #bbe1fa;
 }
 
 h2 {
+  color: #3282b8;
   font-family: 'Montserrat', sans-serif;
+  font-size: 2.5rem;
+  font-weight: normal;
 }
 
 h3 {
+  color: #0f4c75;
   font-family: 'Montserrat', sans-serif;
 }
 
 .top-container {
-  background-color: #1b262c;
+  background-color: #bbe1fa;
   position: relative;
   padding-top: 100px;
+}
+
+.top-satellite {
+  position: absolute;
+  right: 220px;
+  top: 50px;
+}
+
+.bottom-moon {
+  position: absolute;
+  bottom: 280px;
+  left: 180px;
 }
 
 .middle-container {
@@ -35,14 +50,6 @@ h3 {
 .bottom-container {
 }
 
-.top-cloud {
-  position: absolute;
-  right: 300px;
-  top: 50px;
-}
-
-.bottom-cloud {
-  position: absolute;
-  left: 300px;
-  bottom: 300px;
+.footer-link {
+  color: #3282b8;
 }
