--- a/css/styles.css
+++ b/css/styles.css
@@ -176,9 +176,8 @@ hr {
    -moz-border-radius: 20px;
    border-radius: 20px;
    color: #FFFFFF;
-   font-family: 'Montserrat', sans-serif;
+   font-family: sans-serif;
    font-size: 20px;
-   font-weight: 100;
    padding: 10px;
    text-decoration: none;
    display: inline-block;
